# dolphin-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agent/: graph.py  state.py  tools_registry.py
agent/nodes/: agent_node.py  tool_node.py
agent/tools/: file_ops.py  summarizer.py
scripts/: test_agent_memory.py  test_no_agent_pipeline.py  test_simple_agent.py  test_stt.py  test_tools.py
stt/: record.py  transcribe.py
tui/: app.py  app.tcss
